--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ djangorestframework = "*"
 django-rest-auth = "*"
 django-allauth = "*"
 django-rest-api = "*"
+psycopg2 = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.8"
