new branch for heroku

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ gunicorn = "*"
 dj-database-url = "*"
 whitenoise = "*"
 django-heroku = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.8"
