--- a/Pipfile
+++ b/Pipfile
@@ -1,19 +1,21 @@
 [[source]]
-name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-
-[dev-packages]
+name = "pypi"
 
 [packages]
 django = "*"
 djangorestframework = "*"
+python-decouple = "*"
 django-rest-auth = "*"
 django-allauth = "*"
+pusher = "*"
+django-cors-headers = "*"
+gunicorn = "*"
+django-heroku = "*"
 django-rest-api = "*"
 dj-database-url = "*"
 whitenoise = "*"
-psycopg2 = "*"
 
 [dev-packages]
 
